Update GitHub Actions workflow to trigger on both main and master branches for deployment

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -5,9 +5,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main]
-  # optional: auch bei Push auf master auslösen, falls dein Standard-Branch so heißt
-  # branches: [main, master]
+    branches: [main, master]
 
 permissions:
   contents: read
